Developer game list as a table, a link to sales

--- a/templates/developer_main.html
+++ b/templates/developer_main.html
@@ -6,62 +6,32 @@
     background-color:#E94209;
     color:white;
     font-size:20px;
-    width:20%;
-    padding:1.5%;
-    margin:5%;
-    text-align:center;
+    padding:20px;
   }
 
-  .game_row {
-    margin:5%;
-  }
-
-  .game_cell {
-    vertical-align:top;
-    display:inline-block;
-    width:20%;
-  }
-
-  .game_name {
-    padding:4%;
-    color:white;
-    background-color:#E94209;
-    font-size:18px;
-    font-family:LucidaGrande;
-  }
-
-  .game_price {
-    padding:4%;
-    color:white;
-    background-color:black;
-    font-size:18px;
-    font-family:LucidaGrande;
-  }
-
-  .game_copies_sold {
-    position:relative;
-    left:3%;
-    padding:1%;
-    color:white;
-    background-color:#4E4E4E;
-    text-align:center;
-    font-size:18px;
-    font-family:LucidaGrande;
+  th,td {
+    padding:20px;
   }
 
 {% endblock %}
 {% block content %}
       <div class="my_games">My games</div>
-      {% for game in games %}
-      <div class="game_row">
-        <div class="game_cell">
-          <div class="game_name">{{ game.game_name }}</div>
-          <div class="game_price">${{ game.price }}</div>
-        </div>
-        <div class="game_cell game_copies_sold">
-          <p>Copies sold</p>{{ game.copies_sold }}
-        </div>
-      </div>
-      {% endfor %}
-      <a href="/developer/create_game" style="margin:5%;">Create game</a>
+      <table style="margin:20px;">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for game in games %}
+            <tr>
+              <td>{{ game.game_name }}</td>
+              <td>${{ game.price }}</td>
+              <td><a href="games/{{ game.game_name }}">See sales</a></td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      <a href="/developer/create_game" style="margin:40px;">Create game</a>
 {% endblock %}
