--- a/templates/login.html
+++ b/templates/login.html
@@ -43,6 +43,9 @@
       border-top-left-radius: 0;
       border-top-right-radius: 0;
     }
+    .logout {
+      visibility:hidden;
+    }
 </style>
 {% endblock %}
 
