--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,14 @@
         .logout {
             text-align:right;
         }
+
+        .page_header {
+          background-color:#E94209;
+          color:white;
+          font-size:20px;
+          padding:20px;
+        }
+
         {% block style %}
         {% endblock %}
     </style>
