--- a/templates/store.html
+++ b/templates/store.html
@@ -1,13 +1,27 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block style %}
-  .games {
-    background-color:#E94209;
-    color:white;
-    font-size:20px;
+  th,td {
     padding:20px;
   }
 {% endblock %}
 {% block content %}
-  <div class="games">Games in the store</div>
+  <div class="page_header"><a href="/player">Dashboard</a> > Games in the store</div>
+  <table style="margin:20px;">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for game in games %}
+        <tr>
+          <td>{{ game.game_name }}</td>
+          <td>€{{ game.price }}</td>
+          <td>Buy</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
