--- a/templates/player_main.html
+++ b/templates/player_main.html
@@ -5,4 +5,19 @@
 {% block content %}
   <div class="page_header">Dashboard</div>
   <div style="margin:20px;">Go to the <a href="/player/store">store</a> or play your purchased games below<div>
+  <table style="margin:20px;">
+    <thead>
+      <tr>
+        <th>Title</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for game in games %}
+        <tr>
+          <td>{{ purchase_history.game.game_name }}</td>
+          <td><a href="games/{{ game.game_name }}">Play</a></td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
