--- a/templates/play.html
+++ b/templates/play.html
@@ -5,6 +5,26 @@
     margin:20px;
   }
 {% endblock %}
+{% block script %}
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script>
+  window.addEventListener("message", receiveGameMessage);
+
+  function receiveGameMessage(event) {
+    console.log(event.data);
+    if (event.data.messageType == "SCORE") {
+      $.ajax({
+        url: window.location+"/submit_score",
+        method: "POST",
+        data: {'score':event.data.score},
+        success: function(result) {
+          console.log("Score submitted");
+        }
+      });
+    }
+  }
+</script>
+{% endblock %}
 {% block content %}
   <div class="page_header"><a href="/developer">Dashboard</a> > Play {{ game.game_name }}</div>
   <iframe width="800" height="600" src="{{ game.url }}"></iframe>
