--- a/templates/play.html
+++ b/templates/play.html
@@ -40,4 +40,20 @@
 {% block content %}
   <div class="page_header"><a href="/developer">Dashboard</a> > Play {{ game.game_name }}</div>
   <iframe width="800" height="600" src="{{ game.url }}"></iframe>
+  <table style="margin:20px;">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Score</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for highscore in highscores %}
+        <tr>
+          <td>{{ highscore.user }}</td>
+          <td>{{ highscore.score }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
