don't allow user to buy a game twicwe

--- a/templates/store.html
+++ b/templates/store.html
@@ -7,6 +7,9 @@
 {% endblock %}
 {% block content %}
   <div class="page_header"><a href="/player">Dashboard</a> > Games in the store</div>
+    <div>
+    {{ msg }}
+    </div>
   <table style="margin:20px;">
     <thead>
       <tr>
