--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,10 @@
             border:solid #aaaaaa 2px;
         }
 
+        .msg{
+            text-align: center;
+        }
+
         {% block style %}
         {% endblock %}
     </style>
