--- a/templates/play.html
+++ b/templates/play.html
@@ -38,7 +38,12 @@
 </script>
 {% endblock %}
 {% block content %}
-  <div class="page_header"><a href="/developer">Dashboard</a> > Play {{ game.game_name }}</div>
+     <div class="w3-bar w3-black">
+       <button class="w3-bar-item w3-button tablink w3-red" onclick="window.location.href='/player'">My Games</button>
+       <button class="w3-bar-item w3-button tablink" onclick="window.location.href='/player/store'">Store</button>
+   </div>
+
+  <div class="page_header">Game: {{ game.game_name }}</div>
   <iframe width="800" height="600" src="{{ game.url }}"></iframe>
   <table style="margin:20px;">
     <thead>
