Improved buying interface

--- a/templates/buy_game.html
+++ b/templates/buy_game.html
@@ -7,25 +7,28 @@
 {% endblock %}
 {% block content %}
   <div class="page_header"><a href="/player">Dashboard</a> > Games in the store</div>
-    {% if owned %}
-    {{ msg }}
+      <div class="col-md-4 offset-md-4" style="margin-top:20px">
+        {% if owned %}
+        {{ msg }}
 
-    {% else  %}
-    <form action="http://payments.webcourse.niksula.hut.fi/pay/" method="POST">
-    <input type="hidden" name="pid" value={{ pid }} />
-    <input type="hidden" name="sid" value={{ sid }} />
-    <input type="hidden" name="success_url"
-            value={{ success_url }} />
-    <input type="hidden" name="cancel_url"
-            value={{ cancel_url }} />
-    <input type="hidden" name="error_url"
-            value={{ error_url }} />
-    <input type="hidden" name="checksum"
-            value={{ checksum }} />
+        {% else  %}
+        <p><b>Buy the game</b></p>
+        <form action="http://payments.webcourse.niksula.hut.fi/pay/" method="POST">
+          <input type="hidden" name="pid" value={{ pid }} />
+          <input type="hidden" name="sid" value={{ sid }} />
+          <input type="hidden" name="success_url"
+                  value={{ success_url }} />
+          <input type="hidden" name="cancel_url"
+                  value={{ cancel_url }} />
+          <input type="hidden" name="error_url"
+                  value={{ error_url }} />
+          <input type="hidden" name="checksum"
+                  value={{ checksum }} />
 
-    <label for="id_amount">Amount</label>
-    <input type="text" id="id_amount" name="amount" value={{ amount }} />
-    <input type="submit" value="Accept Payment"/>
-</form>
+          <label for="id_amount">Amount</label>
+          <input type="text" readonly="true" id="id_amount" name="amount" value={{ amount }} />
+          <input type="submit" value="Accept Payment"/>
+        </form>
+      </div
     {% endif %}
 {% endblock %}
